--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,7 @@
+declared-services
+- NodeWebStarter-cloudantNoSQLDB
+  label: cloudantNoSQLDB
+  plan: Shared
 applications:
 - path: .
   memory: 512M
@@ -6,5 +10,4 @@ applications:
   name: NodeWebStarter
   host: NodeWebStarter
   disk_quota: 1024M
-  services:
-  - NodeWebStarter-cloudantNoSQLDB
+  
